--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@worldcoin/id": "^0.9.2",
+    "@worldcoin/idkit-standalone": "^1.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
