--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,13 @@
   "name": "world-app-backend",
   "version": "1.0.0",
   "description": "Backend for World App Mini App",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "@worldcoin/id": "^0.9.2",
     "@worldcoin/idkit-standalone": "^1.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
